--- a/index.html
+++ b/index.html
@@ -853,7 +853,9 @@
             <div class="col-xl-4 col-md-4 col-sm-12 col-12">
               <div class="footer-widget footer-about-widget">
                 <div class="footer-logo">
-                  <p>Affidati alla nostra esperienza per scoprire la casa che meglio rispecchia il tuo stile di vita. Grazie a un percorso guidato e personalizzato, ogni dettaglio viene curato per offrirti il massimo comfort.
+                  <p>Affidati alla nostra esperienza per scoprire la casa che meglio rispecchia il tuo stile di vita.
+                    Grazie a un percorso guidato e personalizzato, ogni dettaglio viene curato per offrirti il massimo
+                    comfort.
                   </p>
                 </div>
               </div>
@@ -864,13 +866,7 @@
               </div>
             </div>
             <div class="col-xl-4 col-md-4 col-sm-12 col-12">
-              <div class="footer-widget footer-about-widget" style="
-    display: flex;
-    align-content: center;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-">
+              <div class="footer-widget footer-about-widget" style=" display: flex; align-content: center; justify-content: center; align-items: center; flex-direction: column;">
                 <div class="footer-address">
                   <ul>
                     <li>
@@ -939,6 +935,7 @@
       </div>
     </footer>
     <!-- FOOTER AREA END -->
+
   </div>
   <!-- Body main wrapper end -->
 
