--- a/contact.html
+++ b/contact.html
@@ -255,7 +255,7 @@
                     <button class="btn theme-btn-1 btn-effect-1 text-uppercase" type="submit" onclick="sendMail(event)">
                       Invia
                     </button>
-                    <div id="form-response-message" style="display: block; padding: 10px; margin-top: 10px; border-radius: 5px; color: #155724; background-color: #d4edda;"><p>Il tuo messaggio è stato inviato con successo!</p></div>
+                    <div id="form-response-message" style="display: none; padding: 10px; margin-top: 10px; border-radius: 5px;"></div>
 
                   </div>
                   <p class="form-messege mb-0 mt-20"></p>
