--- a/index.html
+++ b/index.html
@@ -184,7 +184,6 @@
                         </div>
                         <div class="btn-wrapper animated">
                           <a href="contact" class="theme-btn-1 btn btn-effect-1">Richiedi Informazioni</a>
-
                         </div>
                       </div>
                     </div>
@@ -220,7 +219,7 @@
                         </h1>
                         <div class="slide-brief animated">
                           <p>
-                            Scopri un’ampia gamma di immobili selezionati con cura.
+                            Scopri un'ampia gamma di immobili selezionati con cura.
                           </p>
                         </div>
                         <div class="btn-wrapper animated">
@@ -237,49 +236,7 @@
               </div>
             </div>
           </div>
-          <!-- slide-item -->
-          <div class="ltn__slide-item ltn__slide-item-2 ltn__slide-item-3-normal ltn__slide-item-3 ltn__slide-item-11">
-            <div class="ltn__slide-item-inner">
-              <div class="container">
-                <div class="row">
-                  <div class="col-lg-12 align-self-center">
-                    <div class="slide-item-info">
-                      <div class="slide-item-info-inner ltn__slide-animation">
-                        <div class="slide-video mb-50 d-none">
-                          <a class="ltn__video-icon-2 ltn__video-icon-2-border"
-                            href="https://www.youtube.com/embed/tlThdr3O5Qo" data-rel="lightcase:myCollection">
-                            <i class="fa fa-play"></i>
-                          </a>
-                        </div>
-                        <h6 class="slide-sub-title white-color--- animated">
-                          <span><i class="fas fa-home"></i></span> Agenzia Immobiliare
-                        </h6>
-                        <h1 class="slide-title animated">
-                          Cerca e Trova <br /><span>Case di Lusso</span>
-                        </h1>
-                        <div class="slide-brief animated">
-                          <p>
-                            Scopri le migliori proprietà esclusive sul mercato.
-                          </p>
-                        </div>
-                        <div class="btn-wrapper animated">
-                          <a href="contact" class="theme-btn-1 btn btn-effect-1">Richiedi Informazioni</a>
-                          <!-- <a class="ltn__video-play-btn bg-white"
-                          href="https://www.youtube.com/embed/HnbMYzdjuBs?autoplay=1&amp;showinfo=0"
-                          data-rel="lightcase">
-                          <i class="icon-play ltn__secondary-color"></i> -->
-                          </a>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="slide-item-img">
-                      <img src="img/slider/61.jpg" alt="#" />
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+
           <!-- slide-item -->
           <div class="ltn__slide-item ltn__slide-item-2 ltn__slide-item-3-normal ltn__slide-item-3 ltn__slide-item-11">
             <div class="ltn__slide-item-inner">
@@ -303,7 +260,7 @@
                         </h1>
                         <div class="slide-brief animated">
                           <p>
-                            Scopri un’ampia gamma di immobili selezionati con cura.
+                            Scopri un'ampia gamma di immobili selezionati con cura.
                           </p>
                         </div>
                         <div class="btn-wrapper animated">
@@ -313,7 +270,7 @@
                       </div>
                     </div>
                     <div class="slide-item-img">
-                      <img src="img/slider/62.jpg" alt="Trova la casa ideale" />
+                      <img src="img/slider/64.jpg" alt="Trova la casa ideale" />
                     </div>
                   </div>
                 </div>
@@ -359,9 +316,6 @@
                 <img src="img/slider/62.jpg" alt="Flower Image" />
               </div>
               <div class="image-slide-item">
-                <img src="img/slider/63.jpg" alt="Flower Image" />
-              </div>
-              <div class="image-slide-item">
                 <img src="img/slider/64.jpg" alt="Flower Image" />
               </div>
             </div>
@@ -382,17 +336,7 @@
         <div class="row">
           <div class="col-lg-6 align-self-center">
             <div class="about-us-img-wrap about-img-left">
-              <img src="img/others/11.png" alt="About Us Image" />
-              <div class="about-us-img-info about-us-img-info-2 about-us-img-info-3 d-none">
-                <div class="ltn__video-img ltn__animation-pulse1">
-                  <img src="img/others/8.png" alt="video popup bg image" />
-                  <a class="ltn__video-icon-2 ltn__video-icon-2-border---"
-                    href="https://www.youtube.com/embed/X7R-q9rsrtU?autoplay=1&showinfo=0"
-                    data-rel="lightcase:myCollection">
-                    <i class="fa fa-play"></i>
-                  </a>
-                </div>
-              </div>
+              <img src="img/slider/63.jpg" alt="About Us Image" />
             </div>
           </div>
           <div class="col-lg-6 align-self-center">
@@ -461,7 +405,7 @@
           <div class="col-lg-12">
             <div class="section-title-area ltn__section-title-2--- text-center">
               <h6 class="section-subtitle section-subtitle-2--- ltn__secondary-color">
-                I Nostri Servizi </h6>
+                Alcuni dei Nostri Servizi </h6>
               <h1 class="section-title">Il Nostro Obiettivo Principale</h1>
             </div>
           </div>
@@ -470,13 +414,14 @@
           <div class="col-lg-4 col-sm-6 col-12">
             <div class="ltn__feature-item ltn__feature-item-6 text-center bg-white  box-shadow-1">
               <div class="ltn__feature-icon">
-                <!-- <span><i class="flaticon-house"></i></span> -->
-                <img src="img/icons/icon-img/21.png" alt="#">
+                <!-- <span><i class="flaticon-deal-1"></i></span> -->
+                <img src="img/icons/icon-img/23.png" alt="#">
               </div>
               <div class="ltn__feature-info">
-                <h3><a href="contact">Compra una cosa</a></h3>
-                <p>Enimad minim veniam quis nostrud exercitation llamco laboris. Lorem ipsum dolor sit amet.</p>
-                <a class="ltn__service-btn" href="contact">Find A Home <i class="flaticon-right-arrow"></i></a>
+                <h3><a href="contact">Vendita</a></h3>
+                <p>Vendere la tua abitazione con successo? Ti aiutiamo noi. Ricevi una prima valutazione gratuita e
+                  senza impegno</p>
+                <a class="ltn__service-btn" href="contact">Contattaci<i class="flaticon-right-arrow"></i></a>
               </div>
             </div>
           </div>
@@ -487,22 +432,25 @@
                 <img src="img/icons/icon-img/22.png" alt="#">
               </div>
               <div class="ltn__feature-info">
-                <h3><a href="contact">Affita la casa</a></h3>
-                <p>Enimad minim veniam quis nostrud exercitation llamco laboris. Lorem ipsum dolor sit amet.</p>
-                <a class="ltn__service-btn" href="contact">Find A Home <i class="flaticon-right-arrow"></i></a>
+                <h3><a href="contact">Affito</a></h3>
+                <p>Cerchi un inquilino per il tuo appartamento sfitto? Abbiamo +50 immobili in gestione con il 100% dei
+                  canoni pagati.
+                  Contattaci per saperne di più</p>
               </div>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6 col-12">
             <div class="ltn__feature-item ltn__feature-item-6 text-center bg-white  box-shadow-1">
               <div class="ltn__feature-icon">
-                <!-- <span><i class="flaticon-deal-1"></i></span> -->
-                <img src="img/icons/icon-img/23.png" alt="#">
+                <!-- <span><i class="flaticon-house"></i></span> -->
+                <img src="img/icons/icon-img/21.png" alt="#">
               </div>
               <div class="ltn__feature-info">
-                <h3><a href="contact">Vendi la casa</a></h3>
-                <p>Enimad minim veniam quis nostrud exercitation llamco laboris. Lorem ipsum dolor sit amet.</p>
-                <a class="ltn__service-btn" href="contact">Find A Home <i class="flaticon-right-arrow"></i></a>
+                <h3><a href="contact">Acquisto Casa</a></h3>
+                <p>Stai cercando una casa o un investimento immobiliare? Scopri tutte le nostre offerte disponibili</p>
+                <a class="ltn__service-btn"
+                  href="https://www.immobiliare.it/agenzie-immobiliari/378222/sgs-trieste/">Trova immobili<i
+                    class="flaticon-right-arrow"></i></a>
               </div>
             </div>
           </div>
